# beacon-expert

./: .gitignore  Dockerfile  README.md  TEST_PLAN.md  docker-compose.yml  pyproject.toml
.memsearch/memory/: 2026-06-29.md  2026-06-30.md
data/: beacon.db  beacon.db-shm  beacon.db-wal
data/logs/: conversion.jsonl
src/: auth.py  config.py  database.py  frontend.py  llm_adapter.py  main.py
src/engine/: audit_ai.py  chat_workflow.py  classify_ai.py  derive.py  eval.py  freecad_adapter.py  gen_ai_plan.py  llm_call.py  memory_store.py  monitor.py  pipeline.py  plan_ai.py  projection_v3.py  render_engine.py  standard_parts.py  understand_ai.py  verify.py  veritas.py
src/routes/: chat.py  convert.py  drawings.py  knowledge.py  memory.py  settings.py  users.py
tests/: test_phase1.py
