[project]
name = "beacon-expert"
version = "0.1.1"
description = "Beacon专家 - 企业级AI驱动3D→2D工程图自动转换平台"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "sqlalchemy>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "ezdxf>=1.3.0",
    "httpx>=0.24.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "httpx>=0.24.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
